--- a/styles.css
+++ b/styles.css
@@ -57,12 +57,13 @@ body {
   display: inline-block;
   width: 60px;
   height: 34px;
+
 }
 
 .switch input {
   opacity: 0;
-  width: 0;
-  height: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .slider {
@@ -220,10 +221,10 @@ input:checked+.slider:before {
 
 .btn-front {
   display: block;
-  padding: 12px 42px;
+  padding: 12px 0px;
   border-radius: 16px;
   font-size: 1.5rem;
-  background: #266030;
+  background: var(--green);
   color: white;
   transform: translateY(-6px);
 }
@@ -299,7 +300,7 @@ input:checked+.slider:before {
   width: 90%;
   position: relative;
   padding: 12px 0 0 0;
-  font-size: 1.5em;
+  font-size: 1.3em;
   color: white;
   margin: 0 10px;
 }
@@ -351,7 +352,7 @@ input:checked~.task-text {
   position: relative;
   padding-left: 35px;
   margin-bottom: 16px;
-  font-size: 22px;
+  font-size: 1.3em;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -372,6 +373,7 @@ input:checked~.task-text {
   height: 25px;
   width: 25px;
   background-color: #eee;
+  border-radius: 50px;
 }
 
 .task-text-container {
